Site - update links for community call #13

--- a/site/output/contact.html
+++ b/site/output/contact.html
@@ -110,13 +110,17 @@
 
 <hr><h2>Deltacloud Community Calls</h2>
 
-<p>We are trying to establish regular community calls - right now they are held weekly every Thursday - at @ 1700 CET (Prague, Brno, GMT+1) - which means 0800 PST (US West Coast, GMT-8) or 1100 EST (US East Coast, GMT-5). These calls are open to anyone that is interested in Deltacloud - please contact us if you’d like to join the next call.</p>
+<p>We have weekly community calls that are open to anyone that is interested in Deltacloud - please contact us if you’d like to join the next call.</p>
 
-<p>For now we’re using an <a href="http://openetherpad.org/DeltacloudCall">etherpad</a> to keep track of the agenda. Feel free to add items there that you’d like to see addressed in future calls. Calls and agenda are announced on the  <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">dev@deltacloud.apache.org</a> mailing list.</p>
+<p>For now we’re using an <a href="http://openetherpad.org/DeltacloudCall">etherpad</a> to keep track of the agenda and meeting times. Feel free to add items there that you’d like to see addressed in future calls. Calls and agenda are announced on the  <a href="http://mail-archives.apache.org/mod_mbox/deltacloud-dev/">dev@deltacloud.apache.org</a> mailing list.</p>
 
 <p><br></p>
 
 <h3>Past Calls:</h3>
+
+<p><br><a href="http://youtu.be/74KvoLUOmYw">Deltacloud Community Call #13</a></p>
+
+<p>Regions support in the Deltacloud Openstack driver.</p>
 
 <p><br><a href="http://youtu.be/zTCGRDO_3dU">Deltacloud Community Call #12</a></p>
 
